# atlas

./: .gitignore  .gitmodules  .impeccable.md  README.md  docker-compose.onboard-db.yml  docker-compose.onboard-tunnel.yml  docker-compose.yml
atlas-agent/: INSTALLATION.md  README.md  go.mod  go.sum
atlas-agent-deprecated/: README.md
atlas-backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
atlas-backend-deprecated/: README.md  go.mod  go.sum
atlas-spatial-runtime/: README.md  (+1 more)
atlas-spatial-runtime/ros2_ws/src/atlas_spatial_runtime/: package.xml  setup.cfg  setup.py
atlas-spatial-runtime/ros2_ws/src/atlas_spatial_runtime/atlas_spatial_runtime/: __init__.py  depth_contract.py  depth_normalizer.py  health_contract.py  health_node.py  imu_timestamp_gate.py  live_cloud.py  live_cloud_node.py  probe.py  spatial_stream.py  spatial_stream_node.py  stereo_camera_info.py  synthetic_provider.py  transform_contract.py
atlas-spatial-runtime/ros2_ws/src/atlas_spatial_runtime/config/: depthai_rgbd_imu.yaml  depthai_vio.yaml  rtabmap_vio.yaml  transforms.v1.json
atlas-spatial-runtime/ros2_ws/src/atlas_spatial_runtime/launch/: spatial_runtime.launch.py
atlas-spatial-runtime/ros2_ws/src/atlas_spatial_runtime/launch/providers/: depthai.launch.py  synthetic.launch.py
atlas-spatial-runtime/ros2_ws/src/atlas_spatial_runtime/test/: test_depth_normalizer.py  test_depthai_provider_contract.py  test_health_contract.py  test_imu_timestamp_gate.py  test_live_cloud.py  test_spatial_stream.py  test_stereo_camera_info.py
docs/: README.md  (+17 more)
(+433 files in other folders)
