<?xml version="1.0"?>
<package format="3">
  <name>atlas_spatial_runtime</name>
  <version>0.1.0</version>
  <description>Vendor-neutral synchronized RGB-D boundary and health service for Atlas.</description>
  <maintainer email="engineering@sunnyside.local">Sunnyside Engineering</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
